# libload

./: CMakeLists.txt  README.md
cmake/: LibLoadConfig.cmake
include/load/: codegen.hpp  mapfile.hpp  mapped_file.hpp  memory.hpp  memory_module.hpp  module.hpp  process.hpp  version.hpp.cmake
include/load/codegen/: calling_convention.hpp  code_chunk.hpp  code_generator.hpp  common.hpp  system_services.hpp
include/load/memory/: mapped_file.hpp  memory_buffer.hpp  memory_manager.hpp
include/load/module/: load_module.hpp  module.hpp  module_provider.hpp
include/load/process/: create_process.hpp  process.hpp
src/: code_chunk.cpp  code_chunk.hpp  config.hpp.cmake  load_module.cpp  mapfile.cpp  mapped_file.cpp  memory.cpp  memory.hpp  memory_block.hpp  memory_module.cpp  module.cpp  module.hpp  module_provider.cpp  module_provider.hpp
src/arch/: code_generator.hpp
src/arch/x64/: code_generator.cpp  code_generator.hpp
src/pe/: helper.cpp  helper.hpp  helpers.cpp  image.cpp  image.hpp  load_module.cpp  module.cpp  module.hpp
src/platform/windows/: current_process.cpp  current_process.hpp  local_process.cpp  local_process.hpp  memory_access.hpp  system_module.cpp  system_module.hpp
src/windows/: memory.cpp  memory.hpp  module.cpp  process.cpp
test/: sample_module.cpp  test_codegenerator.cpp  test_loadmodule.cpp
